--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-spring": "^9.3.2",
     "web-vitals": "^1.1.2"
