--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "emailjs-com": "^3.2.0",
+    "i18next": "^21.6.3",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "ityped": "^1.0.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-spring": "^9.3.2",
